# somanylemons-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy-config.example.json  deploy-config.json  deploy.sh  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: leemon.md  make-me-famous.md
.claude/skills/lemons/: SKILL.md
commands/: brand-setup.md  content-week.md  lemons.md  score-my-post.md
skills/lemons/: SKILL.md
src/somanylemons_mcp/: __init__.py  __main__.py  remote.py  server.py
src/somanylemons_mcp/skills/: repurpose.md
tests/: remote_client.py  test_mcp_e2e.py  test_remote_onboarding.py
