[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "somanylemons-mcp"
version = "0.3.0"
description = "MCP server for SoManyLemons — AI-powered video reels, LinkedIn content, and brand management via Claude Code, Cursor, or any MCP client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SoManyLemons", email = "support@somanylemons.com" }]
keywords = ["mcp", "ai", "video", "linkedin", "content-marketing", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
remote = ["uvicorn>=0.30", "starlette>=0.37"]

[project.scripts]
sml-mcp = "somanylemons_mcp.server:main"
sml-mcp-remote = "somanylemons_mcp.remote:main"

[project.urls]
Homepage = "https://somanylemons.com"
Documentation = "https://somanylemons.com/api/v1/docs/"
Repository = "https://github.com/NoMiddleInc/somanylemons-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/somanylemons_mcp"]
